# mysite

./: .dockerignore  Cargo.toml  Dioxus.toml  Dockerfile  Dockerfile.local  MARKDOWN_FEATURES.md  PERFORMANCE.md  TOML_CONFIGURATION_GUIDE.md  aboutme.md  docker-compose.yml  package-lock.json  tailwind.css
advanced_markdown_parser/: Cargo.toml  README.md  TODO.md
advanced_markdown_parser/src/: lib.rs
articles/: ai-in-software-development.md  building-modern-web-apps.md  cloudflare-and-rust.md  data-analytics-best-practices.md  getting-started-with-netabase-store.md  getting-started-with-rust.md  microservices-architecture.md  test.md
articles/.obsidian/: workspace.json
articles/Building Blogger/: 01-introduction-and-architecture.md  summary.md
articles/Cloudflare Outage/: 01-centralization-and-infrastructure.md  02-rust-growing-pains.md  summary.md
articles/Project Management/: 01-planning-and-scope.md  02-people.md  03-metrics.md  04-project-scheduling.md  05-network-analysis.md  references.md  summary.md
articles/data-engineering/: 01-pipeline-basics.md  02-data-quality.md  summary.md
articles/netabase_store/: 01-introduction-and-overview.md  02-procedural-macros-and-code-generation.md  03-backend-implementation-and-trait-design.md  04-configuration-api-and-transaction-system.md  05-performance-optimization-and-zerocopy-api.md  README.md  references.md  summary.md
articles/rust-fundamentals/: 01-introduction.md  02-setup.md  03-ownership.md  summary.md
articles/web-development/: 01-modern-web-stack.md  02-performance-optimization.md  summary.md
assets/: tailwind.css
drafts/: references.md
public/algovis/: index.html
public/algovis/assets/: index-L3AW4xNO.js  index-ebXB7mnT.css
react_demo/: Dockerfile  index.html  package-lock.json  package.json  server.ts  tailwind.config.js  vite.config.js
react_demo/src/: App.jsx  index.css
src/: main.rs
src/markdown_management/: github.rs  github_cache.rs  local.rs  mod.rs  watcher.rs
src/pages/: about_page.rs  algo_vis_page.rs  articles_page.rs  demos_page.rs  mod.rs  reading_page.rs  series_detail_page.rs  series_page.rs
src/pages/article_page/: mod.rs
src/pages/home_page/: blog.rs  mod.rs  projects.rs
src/pages/project_page/: mod.rs
src/shared/: nav_bar.rs
