[package]
name = "blogger"
version = "0.1.1"
authors = ["Nzuzo Magagula <nzuzo@newsnet.africa>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.0-rc-3", features = ["router", "fullstack"] }
dioxus-free-icons = { git="https://github.com/dioxus-community/dioxus-free-icons.git", features = ["lucide"] }
dioxus_markdown = {git = "https://github.com/nzuzo-newsnet/markdown.git"}
dioxus-primitives = { git = "https://github.com/DioxusLabs/components", version = "0.0.1", features = ["web"] }
markdown = "1.0.0"
tokio = { version = "1.48.0", features = ["fs"], optional = true}
chrono = { version = "0.4", features = ["wasmbind"], optional = true }
futures = { version = "0.3", optional = true }
cached = { version = "0.54", features = ["async"], optional = true }
notify = { version = "7.0", optional = true }
notify-debouncer-full = { version = "0.4", optional = true }
anyhow = "1.0.100"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22.1"
reqwest = { version = "0.12", features = ["json"] }
gloo-net = "0.6"
gloo-storage = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

# Netabase cache dependencies
netabase_store = { version = "0.0.6", default-features = false, features = ["wasm"], optional = true }
netabase_macros = { version = "0.0.6", optional = true }
netabase_deps = { version = "0.0.6", optional = true }
bincode = { version = "2.0", features = ["serde"], optional = true }
strum = { version = "0.27.2", features = ["derive"], optional = true }
derive_more = { version = "2.0.1", features = ["from", "try_into", "into"], optional = true }
toml = "0.9.8"

[features]
default = ["web"]
web = ["dioxus/web", "dep:netabase_store", "dep:netabase_macros", "dep:netabase_deps", "dep:bincode", "dep:strum", "dep:derive_more", "dep:chrono"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = ["dioxus/server", "dep:tokio", "dep:chrono", "dep:futures", "dep:cached", "dep:notify", "dep:notify-debouncer-full"]

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Better optimization
panic = 'abort'     # Reduce binary size
strip = "debuginfo" # Strip only debug info, keep asset references

[profile.release.package."*"]
opt-level = 'z'
strip = "debuginfo"
